templates/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: minio
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
